Spacing and background outlook issue

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -22,7 +22,7 @@ body {
 
 .signature-container {
   padding: 36px 50px;
-  background-color: #F3F3F3;
+  background-color: white;
   text-align: left;
   margin: 0 auto;
   max-width: 750px;
